@@ -12,6 +12,7 @@ from rasterio.env import setenv
 from rasterio.errors import CRSError
 from rasterio.rio import options
 from rasterio.rio.helpers import resolve_inout
+from rasterio.rio.options import _cb_key_val
 from rasterio.transform import Affine
 from rasterio.warp import (
     reproject, Resampling, SUPPORTED_RESAMPLING, transform_bounds,
@@ -63,11 +64,39 @@ MAX_OUTPUT_HEIGHT = 100000
               help='align the output bounds based on the resolution')
 @options.overwrite_opt
 @options.creation_options
+@click.option(
+    "--to",
+    "--wo",
+    "--transformer-option",
+    "--warper-option",
+    "warper_options",
+    metavar="NAME=VALUE",
+    multiple=True,
+    callback=_cb_key_val,
+    help="GDAL warper and coordinate transformer options.",
+)
 @click.pass_context
-def warp(ctx, files, output, driver, like, dst_crs, dimensions, src_bounds,
-         dst_bounds, res, resampling, src_nodata, dst_nodata, threads,
-         check_invert_proj, overwrite, creation_options,
-         target_aligned_pixels):
+def warp(
+    ctx,
+    files,
+    output,
+    driver,
+    like,
+    dst_crs,
+    dimensions,
+    src_bounds,
+    dst_bounds,
+    res,
+    resampling,
+    src_nodata,
+    dst_nodata,
+    threads,
+    check_invert_proj,
+    overwrite,
+    creation_options,
+    target_aligned_pixels,
+    warper_options,
+):
     """
     Warp a raster dataset.
 
@@ -224,8 +253,14 @@ def warp(ctx, files, output, driver, like, dst_crs, dimensions, src_bounds,
                             src_crs = src.crs
                             kwargs = src.bounds._asdict()
                         dst_transform, dst_width, dst_height = calcdt(
-                            src_crs, dst_crs, src.width, src.height,
-                            resolution=res, **kwargs)
+                            src_crs,
+                            dst_crs,
+                            src.width,
+                            src.height,
+                            resolution=res,
+                            **kwargs,
+                            **warper_options
+                        )
                     except CRSError as err:
                         raise click.BadParameter(
                             str(err), param='dst_crs', param_hint='dst_crs')
@@ -285,7 +320,9 @@ def warp(ctx, files, output, driver, like, dst_crs, dimensions, src_bounds,
                 dst_transform = Affine.translation(left, top) * Affine.scale(res, -res)
 
             if target_aligned_pixels:
-                dst_transform, dst_width, dst_height = aligned_target(dst_transform, dst_width, dst_height, res)
+                dst_transform, dst_width, dst_height = aligned_target(
+                    dst_transform, dst_width, dst_height, res
+                )
 
             # If src_nodata is not None, update the dst metadata NODATA
             # value to src_nodata (will be overridden by dst_nodata if it is not None
@@ -347,4 +384,6 @@ def warp(ctx, files, output, driver, like, dst_crs, dimensions, src_bounds,
                     dst_crs=out_kwargs['crs'],
                     dst_nodata=dst_nodata,
                     resampling=resampling,
-                    num_threads=threads)
+                    num_threads=threads,
+                    **warper_options
+                )
